--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -9,116 +9,71 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
+    <include src="./partials/header.html"></include>
 
-<!--     <header class="header-conteiner">
-
-    <div class="'conteiner">
-      <div class="header-wrap">
-        <svg width="24" height="24">
-          <use href="/src/images/sprite.svg#icon-logo"></use>
-        </svg>
-        <a class="link logo-name" href="/src/index.html"
-          >Bookshelf</a
-        >
-        <nav class="navigation">
-          <ul class="nav-list list">
-              <li nav-list__item><a class=" nav-home-page" href="/src/index.html">HOME</a>
-              </li>
-              <li nav-list__item><a class="link link link-active nav-shopping-page" href="/src/shopping-list.html">SHOPPING LIST<svg class="nav-shopping-page__icon"><use href="/src/images/sprite.svg#icon-uil_cart"></svg></a></li>  
-          </ul>
-        </nav>
-        <label class="switch">
-          <input class="js-color-switcher"type="checkbox" name="check" value="yes" />
-          <span class="slider round"></span>
-        </label>
-        <button class="burger js-open-menu" type="button" aria-expanded="false">
-          <svg width="28" height="28">
-            <!-- <use href="/src/images/sprite.svg#icon-close"></use> -->
-            <use href="/src/images/sprite.svg#icon-burger"></use>
-          </svg>
-        </button>
-        <div class="login-thumb">
-          <!-- <svg width="37" heigth="37">
-              <use href="/src/images/sprite.svg#icon-user"></use></svg> -->
-          <button class="login-thumb__btn" type="button">Sign up</button>
-          <svg width="20" heigth="20">
-              <use href="/src/images/sprite.svg#icon-arrow-right"></use> -->
-
-    <header class="header">
-      <div class="container">
-        <div class="header-wrap">
-          <svg width="24" height="24">
-            <use href="/src/images/sprite.svg#icon-logo"></use>
-
-          </svg>
-          <a class="link logo-name" href="/src/index.html"
-            >Bookshelf</a
-          >
-          <nav class="navigation">
-            <ul class="nav-list list">
-                <li nav-list__item><a class=" nav-home-page" href="/src/index.html">HOME</a>
-                </li>
-                <li nav-list__item><a class="link link link-active nav-shopping-page" href="/src/shopping-list.html">SHOPPING LIST<svg class="nav-shopping-page__icon"><use href="/src/images/sprite.svg#icon-uil_cart"></svg></a></li>  
-            </ul>
-          </nav>
-          <label class="switch">
-            <input class="js-color-switcher"type="checkbox" name="check" value="yes" />
-            <span class="slider round"></span>
-          </label>
-          <button class="burger js-open-menu" type="button" aria-expanded="false">
-            <svg width="28" height="28">
-              <!-- <use href="/src/images/sprite.svg#icon-close"></use> -->
-              <use href="/src/images/sprite.svg#icon-burger"></use>
-            </svg>
-          </button>
-          <div class="login-thumb">
-            <!-- <svg width="37" heigth="37">
-                <use href="/src/images/sprite.svg#icon-user"></use></svg> -->
-            <button class="login-thumb__btn" type="button">Sign up</button>
-            <svg width="20" heigth="20">
-                <use href="/src/images/sprite.svg#icon-arrow-right"></use>
-            </svg>
-          </div>
-        </div>
-      </div>
-  </header>
-    
     <div class="container">
-      <h2>Shopping <span class="list">List</span></h2>
-      <ul class="shopping-list"></ul>
-      <div class="empty-list">
-        <p class="empty-list__paragraph">This page is empty, add some books and proceed to order.</p>
-        <div class="empty-list__image">
-          <picture>
-            <source
-              srcset="
-                ./images/shopping-list/shopping-list-empty-img-375.jpg 1x,
-                ./images/shopping-list/shopping-list-empty-img-375@2x.jpg 2x
-              "
-              media="(max-width: 767px)"
-              type="image/jpeg"
-            />
-            <source
-              srcset="
-                ./images/shopping-list/shopping-list-empty-img-768.jpg    1x,
-                ./images/shopping-list/shopping-list-empty-img-768@2x.jpg 2x
-              "
-              media="(max-width: 1439px)"
-              type="image/jpeg"
-            />
-            <source
-              srcset="
-                ./images/shopping-list/shopping-list-empty-img-1440.jpg    1x,
-                ./images/shopping-list/shopping-list-empty-img-1440@2x.jpg 2x
-              "
-              type="image/jpeg"
-            />
-            <img
-              class="empty-list__image--border"
-              src="./images/shopping-list/shopping-list-empty-img-375.jpg"
-              alt="Stack of books"
-            />
-          </picture>
+      <div class="container-shopping-support">
+        <section class="support-shopping">
+          <div class="support-container">
+            <div class="support-header">
+              <h2 class="support-header__title">Support Ukraine</h2>
+
+              <svg class="swiper-button__icon" height="32" width="20">
+                <use href=".//../images/sprite.svg#icon-trident"></use>
+              </svg>
+            </div>
+            <div class="swiper-container">
+              <div class="swiper-wrapper"></div>
+              <button class="swiper-button swiper-button-next">
+                <svg class="swiper-button__icon" height="20" width="20">
+                  <use href=".//../images/sprite.svg#icon-angle-down"></use>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </section>
+        <div class="container-shopping-list">
+          <h2 class="shopping-list__title">
+            Shopping <span class="span-list">List</span>
+          </h2>
+          <div class="empty-list">
+            <p class="empty-list__paragraph">
+              This page is empty, add some books and proceed to order.
+            </p>
+            <div class="empty-list__image">
+              <picture>
+                <source
+                  srcset="
+                    ./images/shopping-list/shopping-list-empty-img-375.jpg    1x,
+                    ./images/shopping-list/shopping-list-empty-img-375@2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                  type="image/jpeg"
+                />
+                <source
+                  srcset="
+                    ./images/shopping-list/shopping-list-empty-img-768.jpg    1x,
+                    ./images/shopping-list/shopping-list-empty-img-768@2x.jpg 2x
+                  "
+                  media="(max-width: 1439px)"
+                  type="image/jpeg"
+                />
+                <source
+                  srcset="
+                    ./images/shopping-list/shopping-list-empty-img-1440.jpg    1x,
+                    ./images/shopping-list/shopping-list-empty-img-1440@2x.jpg 2x
+                  "
+                  type="image/jpeg"
+                />
+                <img
+                  class="empty-list__image--border"
+                  src="./images/shopping-list/shopping-list-empty-img-375.jpg"
+                  alt="Stack of books"
+                />
+              </picture>
+            </div>
+          </div>
+          <ul class="shopping-list"></ul>
         </div>
       </div>
     </div>
