--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -118,19 +118,11 @@
             </div>
           </div>
           <ul class="shopping-list"></ul>
-    <div class="mobile-menu js-menu-container">
-      <div class="mobile-menu__container">
-        <div class="mobile-menu__wrapper">
-        </div>
-        <!-- <h1>qwertty</h1> -->
-        <button class="auth_button" type="button" id="all-registration-btns"><span>Sign up</span><svg class="call-to-registration-btn__icon" width="20" height="20">
-          <use href="/src/images/sprite.svg#icon-arrow-right"></use>
-          </svg></button> <!--Ця кнопка прибереться коли зявиться функція Реєстрації -->
-      </div>
-    </div>
+          <!-- <div class="shopping-list"> -->
+            <!-- Сюди будуть додаватися елементи списку покупок -->
+          <!-- </div> -->
         </div>
       </div>
-      <ul class="shopping-list"></ul>
     </div>
     <script src="./js/shopping-list/shopping-list.js" type="module"></script>
   </body>
