--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 <header class="header-conteiner">
-  <div class="conteiner">
+  <div class="container">
     <div class="header-wrap">
       <nav class="navigation">
          <svg width="24" height="24">
@@ -154,7 +154,7 @@
         </div>
       </div>
     </div>
-    <script src="./index.js" type="module"></script>    
+    <script src="./js/shopping-list/shopping-list.js" type="module"></script>    
 
   </body>
 </html>
