--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -157,7 +157,7 @@
         </div>
       </div>
     </div>
-    <script src="./js/shopping-list/shopping-list.js" type="module"></script>    
+    <script src="./shopping-list.js" type="module"></script>    
 
   </body>
 </html>
