--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -245,7 +245,7 @@
       </div>
     </div>
     <include src="./partials/auth.html"></include>
-    <script src="./js/shopping-list/shopping-list.js" type="module"></script>       
+    <script src="./js/shopping-list.js" type="module"></script>       
 
   </body>
 </html>
