--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -198,14 +198,14 @@
             <h2 class="support-header__title">Support Ukraine</h2>
 
             <svg class="swiper-button__icon" height="32" width="20">
-              <use href=".//../images/sprite.svg#icon-trident"></use>
+              <use href="./images/sprite.svg#icon-trident"></use>
             </svg>
           </div>
           <div class="swiper-container">
             <div class="swiper-wrapper"></div>
             <button class="swiper-button swiper-button-next">
               <svg class="swiper-button__icon" height="20" width="20">
-                <use href=".//../images/sprite.svg#icon-angle-down"></use>
+                <use href="./images/sprite.svg#icon-angle-down"></use>
               </svg>
             </button>
           </div>
@@ -239,9 +239,7 @@
           </div>
         </div>
         <ul class="shopping-list"></ul>
-        <!-- <div class="shopping-list"> -->
         <!-- Сюди будуть додаватися елементи списку покупок -->
-        <!-- </div> -->
       </div>
     </div>
   </div>
