--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -162,7 +162,7 @@
           </div>
         </div>
         <div class="shopping-list"></div>
-        <div id="pagination" class="tui-pagination"></div>
+        <div id="pagination" class="tui-pagination pag-container"></div>
         <!-- Сюди будуть додаватися елементи списку покупок -->
       </div>
     </div>
